# forgottenserver

./: .gitignore  CMakeLists.txt
data/talkactions/: talkactions.xml
data/talkactions/scripts/: stacktrace.lua
src/: luascript.cpp  luascript.h  otpch.h  otserv.cpp
